add cache and secret components

--- a/cnsi-portal/src/app/components/nav/nav.component.html
+++ b/cnsi-portal/src/app/components/nav/nav.component.html
@@ -60,14 +60,14 @@
          {{'Nav.Assessments.risk'| translate}}
       </a>
   </clr-vertical-nav-group-children>
-  <!-- <clr-vertical-nav-group-children>
+  <clr-vertical-nav-group-children>
     <a 
         clrVerticalNavLink
        routerLink="/assessments/trivy"
        routerLinkActive="active">
        {{'Nav.Assessments.trivy'| translate}}
     </a>
-</clr-vertical-nav-group-children> -->
+</clr-vertical-nav-group-children>
 </clr-vertical-nav-group>
   <clr-vertical-nav-group
           routerLinkActive="active">
