--- a/cnsi-portal/src/app/view/assements/trivy-view/trivy-view.component.html
+++ b/cnsi-portal/src/app/view/assements/trivy-view/trivy-view.component.html
@@ -8,7 +8,7 @@
   <div id="trivy" style="flex:1;height:450px; overflow: hidden;"> </div> -->
 
   <clr-datagrid style="max-height: 400px; overflow: auto;"  [clrDgLoading]="dgLoading" (clrDgRefresh)="pageChange($event)">
-    <clr-dg-column >{{'Trivy_view.name'|translate}}</clr-dg-column>
+    <clr-dg-column >{{'CommonlyUse.name'|translate}}</clr-dg-column>
     <clr-dg-column >{{'Trivy_view.type'|translate}}</clr-dg-column>
     <clr-dg-column >{{'Trivy_view.os'|translate}}</clr-dg-column>
     <clr-dg-column >{{'Trivy_view.image'|translate}}</clr-dg-column>
