Extract the secret as a separate page

--- a/cnsi-portal/src/app/view/setting/secret/secret.component.html
+++ b/cnsi-portal/src/app/view/setting/secret/secret.component.html
@@ -1,1 +1,145 @@
-<p>secret works!</p>
+<div class="secret-page">
+  <div class="sddc-header">
+    <h2 class="sddc-title">Secret</h2>
+  </div>
+  <div class="secret-content">
+    <button class="btn btn-primary btn-sm create" (click)="secretModalFlag=true">
+      <cds-icon shape="plus"></cds-icon>
+      {{'CommonlyUse.new'|translate}}</button>
+  
+    <clr-datagrid [clrDgLoading]="secretLoading">
+      <clr-dg-column>{{'CommonlyUse.name' | translate}}</clr-dg-column>
+      <clr-dg-column>{{'CommonlyUse.namespace' | translate}}</clr-dg-column>
+      <clr-dg-column>{{'CommonlyUse.type' | translate}}</clr-dg-column>
+      <clr-dg-column>{{'CommonlyUse.create_time'| translate}}</clr-dg-column>
+  
+      <clr-dg-row *clrDgItems="let secret of secretsList">
+          <clr-dg-cell>{{secret.metadata.name}}</clr-dg-cell>
+          <clr-dg-cell>{{secret.metadata.namespace}}</clr-dg-cell>
+          <clr-dg-cell>{{secret.metadata.annotations ? secret.metadata.annotations.type : ''}}</clr-dg-cell>
+          <clr-dg-cell>{{secret.metadata.creationTimestamp | date}}</clr-dg-cell>
+      </clr-dg-row>
+  
+      <clr-dg-footer>
+        <clr-dg-pagination #pagination [clrDgPageSize]="10">
+            <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Secrets per page</clr-dg-page-size>
+        </clr-dg-pagination>
+    </clr-dg-footer>
+    </clr-datagrid>
+
+
+    <div [hidden]="!secretModalFlag" class="modal" style="width: 1000px; margin: 0 auto;">
+      <div class="modal-dialog" role="dialog" aria-hidden="true" style="width: 1000px;">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button aria-label="Close" class="close" (click)='secretModalFlag=false' type="button">
+                      <cds-icon aria-hidden="true" shape="close"></cds-icon>
+                  </button>
+                  <h3 class="modal-title">{{'Setting.createSecret'|translate}}
+                  </h3>
+              </div>
+              <div class="modal-body">
+                <form clrForm [formGroup]="secretForm">
+                  <clr-radio-container clrInline>
+                    <label>Secret Type: </label>
+                    <clr-radio-wrapper>
+                      <input type="radio" clrRadio name="secret_type" required value="harbor" formControlName="secret_type"/>
+                      <label>Harbor</label>
+                    </clr-radio-wrapper>
+                    <clr-radio-wrapper>
+                      <input type="radio" clrRadio name="secret_type" required value="vac" formControlName="secret_type"/>
+                      <label>VAC (VMware Application Catalog)</label>
+                    </clr-radio-wrapper>                  </clr-radio-container>
+
+                  <clr-input-container style="padding-bottom: 10px;">
+                    <label>{{'CommonlyUse.name'|translate}}: </label>
+                    <input clrInput data-cy="secret_name" placeholder="" name="secret_name" formControlName="secret_name"/>
+                  </clr-input-container>
+                  <clr-select-container>
+                    <label style="color: #acbac3;">{{'Setting.secretNamespace'|translate}}:</label>
+                  <select clrSelect name="options" name="secret_namespace" formControlName="secret_namespace">
+                    <option *ngFor="let namespace of shardService.namespaceList" [value]="namespace.name">{{namespace.name}}</option>
+                  </select>
+                  </clr-select-container>
+                  <clr-password-container *ngIf="isHarborSecret" style="padding-bottom: 10px;">
+                    <label>{{'Setting.accessKey'|translate}}: </label>
+                    <input clrPassword data-cy="accessKey" placeholder="" name="accessKey" formControlName="secret_accessKey"/>
+                  </clr-password-container>
+                  <clr-password-container *ngIf="isHarborSecret" style="padding-bottom: 10px;">
+                    <label>{{'Setting.accessSecret'|translate}}: </label>
+                    <input clrPassword data-cy="accessSecret" placeholder="" name="accessSecret" formControlName="secret_accessSecret"/>
+                  </clr-password-container>
+                  <clr-input-container *ngIf="!isHarborSecret" style="padding-bottom: 10px;">
+                    <label>CSP API Token: </label>
+                    <input clrInput data-cy="secret_token" placeholder="" name="secret_token" formControlName="secret_token"/>
+                  </clr-input-container>
+                </form>
+  
+              </div>
+              <div class="modal-footer">
+                  <button class="btn btn-outline" (click)='secretModalFlag=false' type="button">{{'CommonlyUse.cancel'|translate}}</button>
+                  <button class="btn btn-primary" data-cy="createSecret" (click)='createSecret()' type="button">{{'CommonlyUse.create'|translate}}</button>
+              </div>
+              <div class="alert alert-danger" role="alert" *ngIf="messageSecretFlag === 'fail'">
+                <div class="alert-items">
+                    <div class="alert-item static">
+                      
+                        <div class="alert-icon-wrapper">
+                            <cds-icon class="alert-icon" shape="exclamation-circle"></cds-icon>
+                        </div>
+                        <span class="alert-text">
+                            {{messageContent}}
+                        </span>
+                        <button (click)="messageSecretFlag =''" type="button" class="close" aria-label="Close">
+                          <cds-icon aria-hidden="true" shape="close"></cds-icon>
+                      </button>
+                    </div>
+                </div>
+            </div>
+          </div>
+      </div>
+    </div>
+
+    <div class="modal" *ngIf="deleteModal">
+      <div class="modal-dialog" role="dialog" aria-hidden="true">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button aria-label="Close" (click)="deleteModal = false" class="close" type="button">
+                      <cds-icon aria-hidden="true" shape="close"></cds-icon>
+                  </button>
+                  <h3 class="modal-title">{{'CommonlyUse.delete' | translate}}</h3>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete this configuration？  
+              
+              
+    
+                  <div class="alert alert-danger" role="alert" *ngIf="messageHarborFlag">
+                    <div class="alert-items">
+                        <div class="alert-item static">
+                            <div class="alert-icon-wrapper">
+                                <cds-icon class="alert-icon" shape="info-circle"></cds-icon>
+                            </div>
+                            <span class="alert-text">
+                              {{messageContent}}
+                            </span>
+                        </div>
+                    </div>
+                    <button type="button" class="close" aria-label="Close">
+                        <cds-icon aria-hidden="true" (click)="messageHarborFlag = false" shape="close"></cds-icon>
+                    </button>
+                </div>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn btn-outline" (click)="deleteModal = false" type="button">Cancel</button>
+                  <button class="btn btn-primary"  type="button">Submit</button>
+              </div>
+          </div>
+      </div>
+    </div>
+
+    <div *ngIf="secretModalFlag || deleteModal" class="modal-backdrop" aria-hidden="true"></div>
+
+
+  </div>
+</div>
