--- a/cnsi-portal/src/app/components/nav/nav.component.html
+++ b/cnsi-portal/src/app/components/nav/nav.component.html
@@ -16,7 +16,7 @@
     <cds-icon clrVerticalNavIcon shape="file-settings" ></cds-icon>
     <b>{{'Nav.Policy.title'| translate}}</b>
   </a>
-  <!-- <clr-vertical-nav-group
+  <clr-vertical-nav-group
   routerLinkActive="active">
 <cds-icon shape="cog" clrVerticalNavIcon></cds-icon>
 <b>{{'Nav.dataSource.title'| translate}}</b>
@@ -32,7 +32,7 @@
     VAC
   </a>
 </clr-vertical-nav-group-children>
-</clr-vertical-nav-group> -->
+</clr-vertical-nav-group>
   <clr-vertical-nav-group
           routerLinkActive="active">
       <cds-icon shape="line-chart" clrVerticalNavIcon></cds-icon>
@@ -93,7 +93,23 @@
           </a>
       </clr-vertical-nav-group-children>
   </clr-vertical-nav-group>
-
+  <clr-vertical-nav-group
+  routerLinkActive="active">
+<cds-icon shape="cog" clrVerticalNavIcon></cds-icon>
+<b>{{'Nav.Setting.title'| translate}}</b>
+<clr-vertical-nav-group-children>
+  <a clrVerticalNavLink
+     routerLink="/setting/secret"
+     routerLinkActive="active">
+     Secret
+  </a>
+  <a clrVerticalNavLink
+     routerLink="/setting/cache"
+     routerLinkActive="active">
+    Cache
+  </a>
+</clr-vertical-nav-group-children>
+</clr-vertical-nav-group>
 
 
 </clr-vertical-nav>
