--- a/cnsi-portal/src/app/view/data-source/harbor-setting/harbor-setting.componen.html
+++ b/cnsi-portal/src/app/view/data-source/harbor-setting/harbor-setting.componen.html
@@ -39,7 +39,7 @@
           </clr-dg-cell>
           <clr-dg-cell>
             <div class="icon-button">
-              <cds-icon shape="note" *ngIf="noteIconFlag" (click)="modifyPolicy()"></cds-icon>
+              <cds-icon shape="note" *ngIf="noteIconFlag" (click)="modifyHarbor()"></cds-icon>
               <cds-icon shape="trash" (click)="deleteModalHandler(harbor.metadata?.name)"></cds-icon>
 
             </div>
