--- a/cnsi-portal/src/app/view/setting/secret/secret.component.html
+++ b/cnsi-portal/src/app/view/setting/secret/secret.component.html
@@ -3,7 +3,7 @@
     <h2 class="sddc-title">Secret</h2>
   </div>
   <div class="secret-content">
-    <button class="btn btn-primary btn-sm create" (click)="secretModalFlag=true">
+    <button data-cy="submit" class="btn btn-primary btn-sm create" (click)="secretModalFlag=true">
       <cds-icon shape="plus"></cds-icon>
       {{'CommonlyUse.new'|translate}}</button>
   
